		it should display no data anymore.
		Change the file /opt/mbse/etc/issue like the example in the
		subdirectory mbtask.
		Change the shell for user "bbs" to /opt/mbse/bin/mbnewusr
		The make install fixes several permissions that are wrong for
		the new style (not setuid) of mbsebbs.
		Remove /opt/mbse/etc/maint to let it replace with a new
		version, or change it by hand.
		After compilation and installation run "mbfile check" to
		update all file entries in the files database. This give a lot
		of output in the logfile, don't worry about it.
		In mbsetup 18 (task manager) set the fields 18, 19 and 20 to
		the right values of your system. Also consider the setting
		of field 13, set it to Yes if you cannot have a internet
		connection at the same time when normal dial to fidonet is
		needed. All other users, (more modems, cable/ADSL etc) set
		this to No.
		Fill in the right IP addresses in fields 11 and 12 of your
		ISP's nameservers. If you don't have internet, fill these
		with 192.168.1.1 and 192.168.1.2 as dummy addresses.
		Change the startup program in /etc/inetd.conf for telnet if
		you previously used mbsebbs to mblogin.
		Change the default login program in mgetty's login.config to
		* - - /opt/mbse/bin/mblogin @

	general:
		Made the Makefile system more simple. The bbs program now
		doesn't run setuid anymore! This makes the system more secure.
		A new program, mblogin, is written to allow logins with
		Fidonet style names from mgetty and telnetd. This is a login
		replacement for bbs use only. Normal shell users can't login,
		not even root!
		On FreeBSD the installed files are not removed anymore from
		the source tree.
		Added German language file made by Harald Wuensch.
		The mbtask daemon now handles the calling of Fidonet nodes.
		The sourcetree has now a new subdirectory called unix. Here
		are all the system specific programs such as mbpasswd,
		mblogin and mbuseradd.
		Started NetBSD port, is in testing fase.
		Added support for xinetd.
